--- a/css/exhibitors.css
+++ b/css/exhibitors.css
@@ -244,6 +244,7 @@ margin-right: 20px;
   margin: 0;
   margin-bottom: 15px;
   background-color: whitesmoke;
+  letter-spacing: -0.1rem;
 }
 
 .signup-button{
