--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -1100,12 +1100,13 @@ p {
 .agenda-subscribe {
   margin: 0;
   font-size: 0.9rem;
+  text-align: center;
+  background-color: darkgray;
 }
 
 .agenda-subscribe a {
-  color: plum;
+  color: lime;
   text-decoration: none;
-  background-color: yellow;
 }
 
 .agenda-subscribe a:hover {
@@ -2851,6 +2852,10 @@ p {
   margin-bottom: 0.8rem;
 }
 
+.event-type-tag {
+  font-weight: 600;
+}
+
  .event-footer {
    display: flex;
    flex-direction: row;
@@ -3069,6 +3074,10 @@ p {
     color: #666;
     line-height: 1.4;
     margin-bottom: 0.5rem;
+  }
+
+  .event-type-tag {
+    font-weight: 600;
   }
 
   .event-details {
@@ -3860,7 +3869,6 @@ p {
   font-size: 10rem;
   font-weight: 800;
   color: whitesmoke;
-  margin-bottom: 3rem;
   text-transform: uppercase;
   text-shadow: 3px 3px 0 black;
 }
@@ -3887,7 +3895,8 @@ p {
   text-align: left;
   max-width: 500px;
   margin: 0 auto;
-  background: whitesmoke;
+  background: blue;
+  color: lime;
 }
 
 .contact-info {
@@ -3914,32 +3923,20 @@ p {
   text-decoration: underline;
 }
 
-.back-to-home-container {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  z-index: 1000;
-}
-
-.back-to-home-btn {
-  background-color: var(--main-color);
-  color: var(--secondary-color);
-  border: 2px solid var(--main-color);
-  padding: 0.5rem 1rem;
-  font-family: "Libre Franklin", sans-serif;
-  font-size: 0.9rem;
-  font-weight: 600;
-  text-decoration: none;
-  transition: all 0.3s ease;
-  text-transform: uppercase;
+.vacancies-title {
   display: inline-block;
+  background-color: greenyellow;
+  color: black;
+  text-decoration: none;
+  padding: 0rem 1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: all 0.3s ease;
+  border: 1px solid var(--main-color);
+  border-radius: 3px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3), inset 0 3px 12px rgba(240, 232, 232, 0.5), inset 0 -3px 12px rgba(0, 0, 0, 0.3), inset 0 0 20px rgba(255, 255, 255, 0.1);
 }
-
-.back-to-home-btn:hover {
-  background-color: var(--secondary-color);
-  color: var(--main-color);
-}
-
 /* About 頁面響應式設計 */
 @media (max-width: 768px) {
   .about-title {
