--- a/css/exhibitors.css
+++ b/css/exhibitors.css
@@ -497,6 +497,7 @@ margin-right: 20px;
     padding: 0 1rem;
     border-left: 1px solid black;
     border-right: 1px solid black;
+    overflow: scroll;
   }
 
   .calender-header {
